--- a/layouts/specs/list.html
+++ b/layouts/specs/list.html
@@ -16,7 +16,7 @@
       {{- if not (in .Title "SPEC X") }}
         <tr class="spec">
           <td class="spec__title">
-            <a href="{{ .Permalink }}">
+            <a href="{{ .URL }}">
               {{- .Title }}
             </a>
           </td>
