Format SPEC metadata

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -91,3 +91,31 @@ table.spec__table thead {
 .widget-search__field {
   height: 1.6rem;
 }
+
+.spec-meta {
+  background: #EEE;
+  padding: 1rem;
+}
+
+.spec-meta .field {
+}
+
+.spec-meta .field-name {
+  display: inline;
+  font-weight: bold;
+}
+
+.spec-meta .field-list {
+  display: flex;
+  flex-direction: column;
+  padding-left: 1rem;
+}
+
+.spec-meta .field-value {
+  display: inline-block;
+}
+
+.spec-meta .field-value a {
+  color: #E22D30;
+  font-weight: bold;
+}
