Add team member projects to gallery

--- a/layouts/shortcodes/person.html
+++ b/layouts/shortcodes/person.html
@@ -10,6 +10,9 @@
         </div>
         {{ .Get "name" }}
      </a>
-     <div class="team-member-handle">@{{ .Get "github_handle" }}</div>
+     {{ $projects := split (.Get "projects") " "}}
+     {{ range $projects }}
+     <div class="team-member-project">{{ . }}</div>
+     {{ end }}
    </div>
 </div>
