--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -152,3 +152,18 @@ table.spec__table thead {
   font-size: 0.8rem;
   font-style: italic;
 }
+
+.adopted-specs {
+  padding-top: 1rem;
+  font-size: 0.9rem;
+}
+
+.adopted-specs-list {
+  margin-left: 1rem;
+  list-style-type: none;
+}
+
+.adopted-specs-list a {
+  color: #E22D30;
+  font-weight: bold;
+}
