--- a/layouts/partials/specs/spec_list.html
+++ b/layouts/partials/specs/spec_list.html
@@ -11,7 +11,7 @@
     {{- range $.Paginator.Pages.ByTitle }}
       {{ $isMeta := (hasPrefix (lower .Title) "meta") }}
       {{ $isExample := (hasPrefix .Title "SPEC X") }}
-      {{- if and (.Title) (not $isExample) (not $isMeta) }}
+      {{- if and (hasPrefix .Title "SPEC") (not $isExample) (not $isMeta) }}
         <tr class="spec">
           <td class="spec__title">
             <a href="{{ .RelPermalink }}">
