--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -2,19 +2,7 @@
 {{- if eq (lower .CurrentSection.Title) "specs" }}
   {{- partial "post_meta/spec_meta.html" $root }}
 {{ else if eq .CurrentSection.Title "AB-Projects" }}
-  <div class="adopted-specs">
-    <h1>Adopted SPECs</h1>
-    {{ $specs := where $.Site.Pages "Section" "specs" }}
-    <ul class="adopted-specs-list">
-      {{- range $specs -}}
-        {{ if not (in (lower .Title) "meta") }}
-          {{ if in (.Params.Get "adopted-by") $root.File.BaseFileName }}
-            <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-          {{- end }}
-        {{- end }}
-      {{- end -}}
-    </ul>
-  </div>
+  {{- partial "post_meta/project_meta.html" $root }}
 {{ else }}
   {{- with .Param "post_meta" -}}
     {{- range $field := . -}}
