--- a/layouts/partials/post_meta/spec_meta.html
+++ b/layouts/partials/post_meta/spec_meta.html
@@ -43,7 +43,7 @@
 
     {{ if $isMeta }}
       <tr>
-        <td class="field-name">AB Projects:</td>
+        <td class="field-name">Core Projects:</td>
         <td class="field-value">
           {{ $ab_projects := (.Site.GetPage "specs/projects").Pages }}
           {{ $len := len $ab_projects }}
