--- a/layouts/specs/list.html
+++ b/layouts/specs/list.html
@@ -3,7 +3,7 @@
 {{ if eq (lower .CurrentSection.Title) "specs" }}
   {{ partial "specs/spec_list.html" . }}
 {{ end }}
-{{ if eq .CurrentSection.Title "AB-Projects" }}
+{{ if eq .CurrentSection.Title "Core Projects" }}
   {{ partial "specs/projects_list.html" . }}
 {{ end }}
 
