Fix linking to core projects

--- a/layouts/partials/post_meta/project_meta.html
+++ b/layouts/partials/post_meta/project_meta.html
@@ -13,7 +13,7 @@
           <td class="field-value">
           {{- range $idx, $el := $val }}
             {{ if eq $attr "adopted-by" }}
-              <a href="{{ printf "/projects/%s" $el | relURL }}">{{ $el }}</a>
+              <a href="{{ relref . (printf "/projects/%s" $el) }}">{{ $el }}</a>
             {{ else }}
               {{ $el }}
             {{ end }}
