--- a/layouts/partials/post_meta/spec_meta.html
+++ b/layouts/partials/post_meta/spec_meta.html
@@ -23,7 +23,7 @@
             <td class="field-value">
             {{- range $idx, $el := $val }}
               {{ if eq $attr "adopted-by" }}
-                <a href="{{ printf "/projects/%s" $el | relURL }}">{{ $el }}</a>
+                <a href="{{ relref . (printf "core-projects/%s" $el) }}">{{ $el }}</a>
               {{ else }}
                 {{ $el }}
               {{ end }}
@@ -45,10 +45,10 @@
       <tr>
         <td class="field-name">Core Projects:</td>
         <td class="field-value">
-          {{ $ab_projects := (.Site.GetPage "specs/projects").Pages }}
+          {{ $ab_projects := (.Site.GetPage "specs/core-projects").Pages }}
           {{ $len := len $ab_projects }}
           {{ range $idx, $page := $ab_projects }}
-            <a href="{{ printf "/specs/projects/%s" .File.BaseFileName | relURL }}">{{ .File.BaseFileName }}</a>
+            <a href="{{ relref . (printf "specs/core-projects/%s" .File.BaseFileName) }}">{{ .File.BaseFileName }}</a>
             {{ if not (eq (add $idx 1) $len) -}}
               <br/>
             {{ end }}
