Fix styling of spec list (set class to content)

--- a/layouts/partials/specs/spec_list.html
+++ b/layouts/partials/specs/spec_list.html
@@ -1,4 +1,4 @@
-<main class="main list" role="main">
+<main class="main list content" role="main">
   <table class="spec__table">
     <thead>
       <tr>
