--- a/layouts/partials/post_meta/project_meta.html
+++ b/layouts/partials/post_meta/project_meta.html
@@ -16,13 +16,13 @@
   </table>
 </div>
 
-<div class="adopted-specs">
+<div class="endorsed-specs">
   <h1>Adopted SPECs</h1>
   {{ $specs := where $.Site.Pages "Section" "specs" }}
-  <ul class="adopted-specs-list">
+  <ul class="endorsed-specs-list">
     {{- range $specs -}}
       {{ if not (in (lower .Title) "meta") }}
-        {{ if in (.Params.Get "adopted-by") $root.File.BaseFileName }}
+        {{ if in (.Params.Get "endorsed-by") $root.File.BaseFileName }}
           <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
         {{- end }}
       {{- end }}
