--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,5 @@
+{{- $highlightColor := .Site.Params.style.vars.highlightColor | default (.Site.Params.highlightColor | default "#e22d30") -}}
+
 table.spec__table thead {
   font-size: 1.2rem;
   font-weight: bold;
@@ -8,7 +10,8 @@ table.spec__table thead {
 }
 
 .spec__title a {
-  font-weight: normal;
+  font-size: 1.0rem;
+  font-weight: bold;
 }
 
 .spec__status {
@@ -124,7 +127,7 @@ table.spec__table thead {
 }
 
 .spec-meta .field-value a {
-  color: #E22D30;
+  color: {{ $highlightColor }};
   font-weight: bold;
 }
 
@@ -161,17 +164,17 @@ table.spec__table thead {
   font-style: italic;
 }
 
-.adopted-specs {
+.endorsed-specs {
   padding-top: 1rem;
   font-size: 0.9rem;
 }
 
-.adopted-specs-list {
+.endorsed-specs-list {
   margin-left: 1rem;
   list-style-type: none;
 }
 
-.adopted-specs-list a {
-  color: #E22D30;
+.endorsed-specs-list a {
+  color: {{ $highlightColor }};
   font-weight: bold;
 }
