Fix missing endorsed

--- a/layouts/partials/post_meta/project_meta.html
+++ b/layouts/partials/post_meta/project_meta.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="endorsed-specs">
-  <h1>Adopted SPECs</h1>
+  <h1>Endorsed SPECs</h1>
   {{ $specs := where $.Site.Pages "Section" "specs" }}
   <ul class="endorsed-specs-list">
     {{- range $specs -}}
