Update draft status

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,7 @@
                         {{ if .Params.draft }}
                           <p>
                             <div class="notice warning-notice">
-                              <div class="notice-type">🛈  &nbsp;This is a draft post.</div>
+                              <div class="notice-type">🛈  &nbsp;This is a draft document.</div>
                             </div>
                           </p>
                         {{ end }}
