--- a/layouts/shortcodes/notice.html
+++ b/layouts/shortcodes/notice.html
@@ -2,5 +2,5 @@
   <div class="notice-type">🛈  &nbsp;{{ .Get 0 | humanize }}</div>
   <div class="notice-content">
     {{ .Inner | markdownify }}
-  </div>
+  </div></br>
 </div>
