--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,5 @@
 {{- $highlightColor := .Site.Params.style.vars.highlightColor | default (.Site.Params.highlightColor | default "#e22d30") -}}
+{{- $menuHighlightColor := .Site.Params.style.vars.menuHighlightColor | default (.Site.Params.highlightColor | default "#e22d30") -}}
 
 table.spec__table thead {
   font-size: 1.2rem;
@@ -53,14 +54,15 @@ table.spec__table thead {
 
 .notice-type {
   font-size: 1rem;
-  padding: 0.5rem 1rem 0.5rem 1rem;
+  font-weight: bold;
+  padding: 0rem 1rem 0rem 1rem;
   width: 100%;
   color: white;
   display: inline-block;
 }
 
 .notice-content {
-  padding: 1rem 1rem 0.1rem 1rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
 .note-notice .notice-type {
@@ -177,4 +179,48 @@ table.spec__table thead {
 .endorsed-specs-list a {
   color: {{ $highlightColor }};
   font-weight: bold;
+}
+
+code {
+  color: #004811;
+}
+
+# override menu from themes/mainroad/assets/css/style.css
+:focus > .menu__btn-title {
+        box-shadow: inset 0 0 1px 3px {{ $menuHighlightColor }};
+}
+.js .menu__btn--active {
+        color: {{ $menuHighlightColor }};
+}
+.menu__item:hover {
+        background: {{ $menuHighlightColor }};
+}
+.menu__item--active {
+        background: {{ $menuHighlightColor }};
+}
+@media screen and (min-width: 767px) {
+        .menu {
+                border-bottom: 5px solid {{ $menuHighlightColor }};
+        }
+
+        .menu__btn {
+                display: none;
+        }
+
+        .menu__list,
+        .js .menu__list {
+                position: relative;
+                display: -webkit-flex;
+                display: flex;
+                -webkit-flex-wrap: wrap;
+                flex-wrap: wrap;
+                visibility: visible;
+                border: 0;
+                -webkit-transform: none;
+                transform: none;
+        }
+
+        .menu__item {
+                border-left: 1px solid rgba(255, 255, 255, .1);
+        }
 }
