Render category pages with _index content

--- a/layouts/specs/list.html
+++ b/layouts/specs/list.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 
+{{ .Content }}
+
 {{ if eq (lower .CurrentSection.Title) "specs" }}
   {{ partial "specs/spec_list.html" . }}
 {{ end }}
