Render list main content with correct wrapper classes

--- a/layouts/specs/list.html
+++ b/layouts/specs/list.html
@@ -1,6 +1,10 @@
 {{ define "main" }}
 
-{{ .Content }}
+{{ with .Content }}
+  <div class="content main__content clearfix">
+    {{ . }}
+  </div>
+{{ end }}
 
 {{ if eq (lower .CurrentSection.Title) "specs" }}
   {{ partial "specs/spec_list.html" . }}
