--- a/layouts/shortcodes/person.html
+++ b/layouts/shortcodes/person.html
@@ -1,18 +1,16 @@
 <div class="person">
-  <div class="team-member">
-     <a href="https://github.com/{{ .Get "github_handle" }}" class="team-member-name">
-        <div class="team-member-photo">
-           <img
-             src="{{ default (relURL "/img/avatar.png") (.Get "avatar") }}"
-             loading="lazy"
-             alt="Avatar picture of @{{ .Get "github_handle" }}"
-           />
-        </div>
-        {{ .Get "name" }}
-     </a>
-     {{ $projects := split (.Get "projects") " "}}
-     {{ range $projects }}
-     <div class="team-member-project">{{ . }}</div>
-     {{ end }}
-   </div>
+  <a href="https://github.com/{{ .Get "github_handle" }}" class="person-name">
+    <div class="person-photo">
+      <img
+        src="{{ default (relURL "/img/avatar.png") (.Get "avatar") }}"
+        loading="lazy"
+        alt="Avatar picture of @{{ .Get "github_handle" }}"
+      />
+    </div>
+    {{ .Get "name" }}
+  </a>
+  {{ $projects := split (.Get "projects") " "}}
+  {{ range $projects }}
+  <div class="person-project">{{ . }}</div>
+  {{ end }}
 </div>
